hide top products in overview-latam component template

--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -271,7 +271,7 @@
             </div>
         </div>
 
-        <div class="row mt-5">
+        <div class="row mt-5" [hidden]="true">
             <div class="col-12" *ngIf="selectedCategories.length > 1">
                 <div class="pills-container mb-4">
                     <ul class="nav nav-pills nav-fill">
