add pc-selector-wrapper component

--- a/src/app/modules/dashboard/pages/other-tools/other-tools.component.html
+++ b/src/app/modules/dashboard/pages/other-tools/other-tools.component.html
@@ -26,6 +26,6 @@
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 3">
-        <app-maintenance></app-maintenance>
+        <app-pc-selector-wrapper></app-pc-selector-wrapper>
     </ng-container>
 </div>
