update retail-filters component

--- a/src/app/modules/dashboard/components/retail-filters/retail-filters.component.html
+++ b/src/app/modules/dashboard/components/retail-filters/retail-filters.component.html
@@ -1,46 +1,155 @@
 <div class="row">
+
+    <!-- source -->
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
         <small class="h4 mb-1">Fuente</small>
-        <mat-select [formControl]="sources" multiple placeholder="Selecciona una Fuente">
+        <mat-select [formControl]="sources" multiple placeholder="Selecciona una Fuente" disableOptionCentering>
+            <div class="input-group input-group-alternative mb-1">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-search"></i></span>
+                </div>
+                <input class="form-control" [(ngModel)]="sourceFilter" matInput type="text"
+                    (keyup)="filterFromList('sources', 'source', $event.target.value)" placeholder="Buscar Fuente"
+                    [ngModelOptions]="{standalone: true}" (keydown.space)="$event.stopPropagation()">
+            </div>
             <mat-select-trigger>
-                {{sources.value ? sources.value[0]?.name : ''}}
-                <span *ngIf="sources.value?.length > 1" class="example-additional-selection">
-                    (+ {{sources.value?.length === 2 ? 'otra' : 'otras'}}
-                    {{ sources.value?.length === 2 ? '' : sources.value.length - 1}})
-                </span>
+                <div class="select-value-container">
+                    <span class="select-value">
+                        {{sources.value
+                        ? sources.value[0]?.name
+                        ? sources.value[0]?.name
+                        : sources.value[1]?.name
+                        : ''}}
+                    </span>
+                    <span *ngIf="sourcesCounter > 1" class="example-additional-selection ml-1">
+                        (+ {{ sourcesCounter === 2 ? 'otra' : 'otras' }}
+                        {{ sourcesCounter === 2 ? '' : sourcesCounter - 1 }} )
+                    </span>
+                </div>
             </mat-select-trigger>
-            <mat-option *ngFor="let source of sourceList" [value]="source">{{source.name}}</mat-option>
+            <mat-option #allSelectedSources [value]="0" class="font-weight-bold"
+                (click)="toggleAllSelection('sources', 'source')">
+                Todas
+            </mat-option>
+
+            <ng-container *ngFor="let source of sourceList">
+                <mat-option class="mat-option-container" [hidden]="source.hidden" [value]="source"
+                    (click)="tosslePerOne('allSelectedSources', 'sources', 'sourceList')">
+                    <span class="option-name">{{ source.name }}</span>
+                    <button type="button" class="btn btn-sm btn-secondary"
+                        (click)="uniqueSelection('sources', 'source', source)">
+                        Solamente
+                    </button>
+                </mat-option>
+            </ng-container>
         </mat-select>
+
+        <small class="text-danger"
+            *ngIf="(sources?.value?.length < 1 && mediums?.value?.length < 1) && (sources.touched || mediums.touched)">
+            Selecciona al menos una Fuente o Medio
+        </small>
     </div>
+
+    <!-- medium -->
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
         <small class="h4 mb-1">Medio</small>
-        <mat-select [formControl]="ways" multiple placeholder="Selecciona un Medio">
+        <mat-select [formControl]="mediums" multiple placeholder="Selecciona un Medio" disableOptionCentering>
+            <div class="input-group input-group-alternative mb-1">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-search"></i></span>
+                </div>
+                <input class="form-control" [(ngModel)]="mediumFilter" matInput type="text"
+                    (keyup)="filterFromList('mediums', 'medium', $event.target.value)" placeholder="Buscar Medio"
+                    [ngModelOptions]="{standalone: true}" (keydown.space)="$event.stopPropagation()">
+            </div>
             <mat-select-trigger>
-                {{ways.value ? ways.value[0]?.name : ''}}
-                <span *ngIf="ways.value?.length > 1" class="example-additional-selection">
-                    (+ {{ways.value?.length === 2 ? 'otra' : 'otras'}}
-                    {{ ways.value?.length === 2 ? '' : ways.value.length - 1}})
-                </span>
+                <div class="select-value-container">
+                    <span class="select-value">
+                        {{mediums.value
+                        ? mediums.value[0]?.name
+                        ? mediums.value[0]?.name
+                        : mediums.value[1]?.name
+                        : ''}}
+                    </span>
+                    <span *ngIf="mediumsCounter > 1" class="example-additional-selection ml-1">
+                        (+ {{ mediumsCounter === 2 ? 'otro' : 'otros' }}
+                        {{ mediumsCounter === 2 ? '' : mediumsCounter - 1 }} )
+                    </span>
+                </div>
             </mat-select-trigger>
-            <mat-option *ngFor="let way of wayList" [value]="way">{{way.name}}</mat-option>
+            <mat-option #allSelectedMediums [value]="0" class="font-weight-bold"
+                (click)="toggleAllSelection('mediums', 'medium')">
+                Todos
+            </mat-option>
+
+            <ng-container *ngFor="let medium of mediumList">
+                <mat-option class="mat-option-container" [hidden]="medium.hidden" [value]="medium"
+                    (click)="tosslePerOne('allSelectedMediums', 'mediums', 'mediumList')">
+                    <span class="option-name">{{ medium.name }}</span>
+                    <button type="button" class="btn btn-sm btn-secondary"
+                        (click)="uniqueSelection('mediums', 'medium', medium)">
+                        Solamente
+                    </button>
+                </mat-option>
+            </ng-container>
         </mat-select>
     </div>
+
+    <!-- audiences -->
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-        <small class="h4 mb-1">Audiencia</small>
-        <mat-select [formControl]="audiences" multiple placeholder="Selecciona una Audiencia">
+        <small class="h4 mb-1">Audiencias</small>
+        <mat-select [formControl]="audiences" multiple placeholder="Selecciona una Audiencia" disableOptionCentering>
+            <div class="input-group input-group-alternative mb-1">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-search"></i></span>
+                </div>
+                <input class="form-control" [(ngModel)]="audienceFilter" matInput type="text"
+                    (keyup)="filterFromList('audiences', 'audience', $event.target.value)"
+                    placeholder="Buscar Audiencia" [ngModelOptions]="{standalone: true}"
+                    (keydown.space)="$event.stopPropagation()">
+            </div>
             <mat-select-trigger>
-                {{audiences.value ? audiences.value[0]?.name : ''}}
-                <span *ngIf="audiences.value?.length > 1" class="example-additional-selection">
-                    (+ {{audiences.value?.length === 2 ? 'otra' : 'otras'}}
-                    {{ audiences.value?.length === 2 ? '' : audiences.value.length - 1}})
-                </span>
+                <div class="select-value-container">
+                    <span class="select-value">
+                        {{audiences.value
+                        ? audiences.value[0]?.name
+                        ? audiences.value[0]?.name
+                        : audiences.value[1]?.name
+                        : ''}}
+                    </span>
+                    <span *ngIf="audiencesCounter > 1" class="example-additional-selection ml-1">
+                        (+ {{ audiencesCounter === 2 ? 'otra' : 'otras' }}
+                        {{ audiencesCounter === 2 ? '' : audiencesCounter - 1 }} )
+                    </span>
+                </div>
             </mat-select-trigger>
-            <mat-option *ngFor="let audience of audienceList" [value]="audience">{{audience.name}}</mat-option>
+            <mat-option #allSelectedAudiences [value]="0" class="font-weight-bold"
+                (click)="toggleAllSelection('audiences', 'audience')">
+                Todas
+            </mat-option>
+
+            <ng-container *ngFor="let audience of audienceList">
+                <mat-option class="mat-option-container" [hidden]="audience.hidden" [value]="audience"
+                    (click)="tosslePerOne('allSelectedAudiences', 'audiences', 'audienceList')">
+                    <span class="option-name">{{ audience.name }}</span>
+                    <button type="button" class="btn btn-sm btn-secondary"
+                        (click)="uniqueSelection('audiences', 'audience', audience)">
+                        Solamente
+                    </button>
+                </mat-option>
+            </ng-container>
         </mat-select>
+        <small class="text-danger" *ngIf="audiences?.value?.length < 1 && audiences.touched">
+            Selecciona al menos una Audiencia
+        </small>
     </div>
-    <div class="col-12 col-sm-6 col-lg-3 mb-4">
+
+    <!-- filter button -->
+    <div class="col-12 col-lg-3 mb-4">
         <div class="button-container">
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary" [disabled]="
+                (sources?.value?.length < 1 && mediums?.value?.length < 1) ||
+                audiences?.value.length < 1" (click)="applyFilters()">
                 <i class="fas fa-filter mr-2"></i>
                 Filtrar
             </button>
