--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -33,144 +33,7 @@
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 3">
-        <div class="mt-5">
-            <app-retail-filters></app-retail-filters>
-        </div>
-
-        <!-- CARD STATS -->
-        <div class="row mt-5">
-            <div class="col-12">
-                <div class="stats-container">
-                    <app-card-stat *ngFor="let stat of stats" [stat]="stat"></app-card-stat>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- ROAS CARDS -->
-        <div class="row mt-5 mb-2">
-            <div class="col-12">
-                <span class="h3">ROAS por Sector</span>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12 col-sm-4">
-                <div class="card card-stats mb-4">
-                    <div class="card-body ">
-                        <div class="metric-container">
-                            <div class="metric-data">
-                                <h5 class="card-title text-uppercase text-muted mb-0">Search</h5>
-                                <span class="h3 font-weight-bold mb-0">20%</span>
-                            </div>
-                            <div class="metric-icon">
-                                <div class="icon icon-shape text-white bg-default rounded-circle shadow">
-                                    <i class="fab fa-google"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-4">
-                <div class="card card-stats mb-4">
-                    <div class="card-body">
-                        <div class="metric-container">
-                            <div class="metric-data">
-                                <h5 class="card-title text-uppercase text-muted mb-0">Marketing</h5>
-                                <span class="h3 font-weight-bold mb-0">60%</span>
-                            </div>
-                            <div class="metric-icon">
-                                <div class="icon icon-shape text-white bg-primary rounded-circle shadow">
-                                    <i class="fas fa-bullhorn"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-4">
-                <div class="card card-stats mb-4">
-                    <div class="card-body">
-                        <div class="metric-container">
-                            <div class="metric-data">
-                                <h5 class="card-title text-uppercase text-muted mb-0">Ventas</h5>
-                                <span class="h3 font-weight-bold mb-0">15%</span>
-                            </div>
-                            <div class="metric-icon">
-                                <div class="icon icon-shape text-white bg-purple rounded-circle shadow">
-                                    <i class="fas fa-store"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- ACCORDION -->
-        <div class="mt-5">
-            <mat-accordion multi>
-                <mat-expansion-panel (opened)="panelChange('panel1',true)" (closed)="panelChange('panel1',false)">
-                    <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            <div class="panel-title-container">
-                                <div class="icon icon-shape text-white rounded-circle shadow bg-default">
-                                    <i class="fas fa-users"></i>
-                                </div>
-                                <span class="h3 mb-0">Audiencias</span>
-                            </div>
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-audiences-wrapper *ngIf="extPanelIsOpen.panel1"></app-audiences-wrapper>
-                </mat-expansion-panel>
-
-                <mat-expansion-panel (opened)="panelChange('panel2',true)" (closed)="panelChange('panel2',false)">
-                    <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            <div class="panel-title-container">
-                                <div class="icon icon-shape text-white rounded-circle shadow bg-primary">
-                                    <i class="fas fa-user-plus"></i>
-                                </div>
-                                <span class="h3 mb-0">Adquisición</span>
-                            </div>
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-acquisition-wrapper *ngIf="extPanelIsOpen.panel2"></app-acquisition-wrapper>
-                </mat-expansion-panel>
-
-                <mat-expansion-panel (opened)="panelChange('panel3',true)" (closed)="panelChange('panel3',false)">
-                    <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            <div class="panel-title-container">
-                                <div class="icon icon-shape text-white rounded-circle shadow bg-purple">
-                                    <i class="fas fa-eye"></i>
-                                </div>
-                                <span class="h3 mb-0">Comportamiento</span>
-                            </div>
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-behaviour-wrapper *ngIf="extPanelIsOpen.panel3"></app-behaviour-wrapper>
-                </mat-expansion-panel>
-
-                <mat-expansion-panel (opened)="panelChange('panel4',true)" (closed)="panelChange('panel4',false)">
-                    <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            <div class="panel-title-container">
-                                <div class="icon icon-shape text-white rounded-circle shadow bg-warning">
-                                    <i class="fas fa-hand-holding-usd"></i>
-                                </div>
-                                <span class="h3 mb-0">Conversión</span>
-                            </div>
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-conversion-wrapper *ngIf="extPanelIsOpen.panel4"></app-conversion-wrapper>
-                </mat-expansion-panel>
-            </mat-accordion>
-        </div>
+        <app-campaign-in-retail-wrapper [requestInfoChange]="requestInfoChange$"></app-campaign-in-retail-wrapper>
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 4">
