--- a/src/app/modules/dashboard/pages/home/home.component.scss
+++ b/src/app/modules/dashboard/pages/home/home.component.scss
@@ -47,7 +47,7 @@
 
         @media screen and (max-width: 767px) {
             .media-container .media {
-                max-width: 80vw;
+                width: 75vw;
                 height: auto;
             }
         }
