add home page to dashboard module (#163)
* add home page component

* add route to dashboard/home in admin-layout routing

* add maps assets

* update redirection in login component, users-mngmt guard and interceptor service

* add home redirection in brand logo of sidebar component

* clean selection in sidebar component

* clean titles in navbar component

* update user service

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,7 +7,8 @@
     </button>
     <!-- Brand -->
     <a class="navbar-brand pt-0">
-      <img src="./assets/img/brand/hp-logo.png" class="navbar-brand-img" alt="CO-OP">
+      <img src="./assets/img/brand/hp-logo.png" class="navbar-brand-img home-logo" alt="COOP"
+        routerLink="/dashboard/home">
     </a>
     <!-- User -->
     <ul class="nav align-items-center d-md-none">
@@ -44,7 +45,7 @@
         <div class="row">
           <div class="col-6 collapse-brand">
             <a>
-              <img src="./assets/img/brand/hp-logo.png">
+              <img class="home-logo" src="./assets/img/brand/hp-logo.png" alt="COOP" routerLink="/dashboard/home">
             </a>
           </div>
           <div class="col-6 collapse-close">
